    * [SM-1622] - servicemix-eip content enricher should copy original message properties in the way the pipeline does
    * [SM-1626] - basic sample failed with trunk
    * [SM-1627] - loan-broker sample doesn't work
    * [SM-1628] - ws-notification sample doesn't
    * [SM-1641] - remoteRepositories is incorrect in smx-arch scripts

Improvement

    * [SM-810] - Create single complete ServiceMix Shared Library
    * [SM-908] - Upgrade to ActiveMQ 5.0
    * [SM-1058] - Allow the File Binding Component to work in "append" mode
    * [SM-1112] - Add a way to access the Delivery Channel inside the ScriptExchangeHelper to create new Message Exchanges etc.
    * [SM-1115] - FilePoller should offer configurable targetOperation
    * [SM-1130] - FtpPoller should offer configurable targetOperation
    * [SM-1135] - Put mandatory osgi entries in the JBI artifacts so that those artifacts can be deployed as bundles
    * [SM-1150] - Additional Flow configuration for Geronimo ServiceMix Service
    * [SM-1155] - New component: OSWorkflow JBI Component
    * [SM-1174] - update cxf version used in servicemix
    * [SM-1218] - ServiceMix logging refers to the incubator website
    * [SM-1222] - FilePoller and FileSender archetypes
    * [SM-1233] - add jms transport support for cxf-bc
    * [SM-1236] - CXF BC should be able to manage WSA Headers as a Map of Strings
    * [SM-1246] - Deprecate backport-util-concurrent since ServiceMix requires Java 5
    * [SM-1248] - ServiceMix Drools Enhancements
    * [SM-1253] - checkstyle error in servicemix-osworkflow
    * [SM-1255] - Ability to not check duplicate files when uploading
    * [SM-1261] - Allow script component to send InOut exchanges as a consumer
    * [SM-1264] - Cleanup the servicemix-binding-component archetype so the BCs it creates pass the Checkstyle rules
    * [SM-1271] - Make ComponentContext available to beans configured in BeanComponent service unit xbean.xml